Detecting encoder impulses

--- a/ccs/buksi/main.cfg
+++ b/ccs/buksi/main.cfg
@@ -85,3 +85,5 @@ Timer0_A3.regs.interruptSource[1].interruptEnable = true;
 Timer0_A3.regs.interruptSource[1].interruptHandler = true;
 Timer0_A3.regs.TA0CCTL0.CCIE = Timer0_A3.defs.CCIE;
 GPIO.regs.P1DIR.Bit6 = GPIO.defs.BIT6;
+GPIO.regs.P2REN.Bit5 = GPIO.defs.BIT5;
+GPIO.regs.P2REN.Bit0 = GPIO.defs.BIT0;
