--- a/ccs/buksi/main.cfg
+++ b/ccs/buksi/main.cfg
@@ -87,3 +87,9 @@ Timer0_A3.regs.TA0CCTL0.CCIE = Timer0_A3.defs.CCIE;
 GPIO.regs.P1DIR.Bit6 = GPIO.defs.BIT6;
 GPIO.regs.P2REN.Bit5 = GPIO.defs.BIT5;
 GPIO.regs.P2REN.Bit0 = GPIO.defs.BIT0;
+System.ie2Regs.interruptSource[1].interruptHandler = true;
+System.ie2Regs.interruptSource[3].interruptHandler = true;
+System.ie2Regs.interruptSource[5].interruptHandler = true;
+System.ie2Regs.interruptSource[6].interruptHandler = true;
+System.ie2Regs.interruptSource[7].interruptHandler = true;
+System.ie2Regs.IE2.UCA0TXIE = System.ie2Defs.UCA0TXIE;
