Use gpios to show working/failure state

--- a/ccs/buksi/main.cfg
+++ b/ccs/buksi/main.cfg
@@ -93,3 +93,8 @@ System.ie2Regs.interruptSource[5].interruptHandler = true;
 System.ie2Regs.interruptSource[6].interruptHandler = true;
 System.ie2Regs.interruptSource[7].interruptHandler = true;
 System.ie2Regs.IE2.UCA0TXIE = System.ie2Defs.UCA0TXIE;
+GPIO.regs.P1DIR.Bit7 = GPIO.defs.BIT7;
+GPIO.regs.P2DIR.Bit6 = GPIO.defs.BIT6;
+GPIO.regs.P2SEL.Bit6 = GPIO.defs.BIT6_OFF;
+GPIO.regs.P2DIR.Bit7 = GPIO.defs.BIT7;
+GPIO.regs.P2SEL.Bit7 = GPIO.defs.BIT7_OFF;
