Add status gpios

--- a/ccs/buksi/main.cfg
+++ b/ccs/buksi/main.cfg
@@ -98,3 +98,4 @@ GPIO.regs.P2DIR.Bit6 = GPIO.defs.BIT6;
 GPIO.regs.P2SEL.Bit6 = GPIO.defs.BIT6_OFF;
 GPIO.regs.P2DIR.Bit7 = GPIO.defs.BIT7;
 GPIO.regs.P2SEL.Bit7 = GPIO.defs.BIT7_OFF;
+GPIO.regs.P1DIR.Bit0 = GPIO.defs.BIT0;
