Send measurements over uart

--- a/ccs/buksi/main.cfg
+++ b/ccs/buksi/main.cfg
@@ -7,6 +7,7 @@ var CSL = xdc.useModule('ti.mcu.msp430.csl.CSL');
 var Timer1_A3 = xdc.useModule('ti.mcu.msp430.csl.timer.Timer1_A3');
 var USCI_A0 = xdc.useModule('ti.mcu.msp430.csl.communication.USCI_A0');
 var Timer0_A3 = xdc.useModule('ti.mcu.msp430.csl.timer.Timer0_A3');
+var ADC10 = xdc.useModule('ti.mcu.msp430.csl.adc.ADC10');
 CSL.configApiVersion = "1.20.00";
 
 /* these modules should be part of every project */
@@ -99,3 +100,15 @@ GPIO.regs.P2SEL.Bit6 = GPIO.defs.BIT6_OFF;
 GPIO.regs.P2DIR.Bit7 = GPIO.defs.BIT7;
 GPIO.regs.P2SEL.Bit7 = GPIO.defs.BIT7_OFF;
 GPIO.regs.P1DIR.Bit0 = GPIO.defs.BIT0;
+ADC10.regs.ADC10CTL0.ADC10ON = ADC10.defs.ADC10ON;
+ADC10.regs.ADC10CTL1.INCH = ADC10.defs.INCH_3;
+ADC10.regs.ADC10CTL0.ADC10SR = ADC10.defs.ADC10SR;
+ADC10.regs.ADC10AE0 = 8;
+ADC10.regs.ADC10CTL0.REF2_5V = ADC10.defs.REF2_5V;
+ADC10.regs.ADC10CTL0.REFON = ADC10.defs.REFON;
+ADC10.regs.ADC10CTL0.SREF = ADC10.defs.SREF_1;
+ADC10.regs.ADC10CTL1.CONSEQ = ADC10.defs.CONSEQ_2;
+ADC10.regs.ADC10CTL0.ADC10SHT = ADC10.defs.ADC10SHT_3;
+ADC10.regs.ADC10CTL1.ADC10SSEL = ADC10.defs.ADC10SSEL_2;
+ADC10.regs.ADC10CTL1.ADC10DIV = ADC10.defs.ADC10DIV_7;
+ADC10.regs.ADC10CTL0.MSC = ADC10.defs.MSC;
