--- a/ccs/buksi/src/grace/makefile
+++ b/ccs/buksi/src/grace/makefile
@@ -21,7 +21,7 @@ endif
 all: grace.lib
 
 # add power advice options to the Grace generated files
-objs/Grace_init.obj objs/CSL_init.obj objs/GPIO_init.obj objs/BCSplus_init.obj objs/USCI_A0_init.obj objs/InterruptVectors_init.obj objs/Timer0_A3_init.obj objs/Timer1_A3_init.obj objs/System_init.obj objs/WDTplus_init.obj: CCOPTS := $(CCOPTS) --advice:power=all
+objs/Grace_init.obj objs/CSL_init.obj objs/GPIO_init.obj objs/BCSplus_init.obj objs/USCI_A0_init.obj objs/ADC10_init.obj objs/InterruptVectors_init.obj objs/Timer0_A3_init.obj objs/Timer1_A3_init.obj objs/System_init.obj objs/WDTplus_init.obj: CCOPTS := $(CCOPTS) --advice:power=all
     
 # pattern rule to compile .c source to an object file
 objs/%.obj: %.c makefile
@@ -29,7 +29,7 @@ objs/%.obj: %.c makefile
 	$(CC) $(CCOPTS) $(CPPFLAGS) "$<"
 
 # rule to combine all objects into the grace.lib library
-grace.lib: objs/Grace_init.obj objs/CSL_init.obj objs/GPIO_init.obj objs/BCSplus_init.obj objs/USCI_A0_init.obj objs/InterruptVectors_init.obj objs/Timer0_A3_init.obj objs/Timer1_A3_init.obj objs/System_init.obj objs/WDTplus_init.obj
+grace.lib: objs/Grace_init.obj objs/CSL_init.obj objs/GPIO_init.obj objs/BCSplus_init.obj objs/USCI_A0_init.obj objs/ADC10_init.obj objs/InterruptVectors_init.obj objs/Timer0_A3_init.obj objs/Timer1_A3_init.obj objs/System_init.obj objs/WDTplus_init.obj
 	@ echo are430 $@ $< ...
 	$(AR) $@ $^
 
