--- a/esp8266/Makefile
+++ b/esp8266/Makefile
@@ -52,7 +52,7 @@ TARGET		= httpd
 
 # which modules (subdirectories) of the project to include in compiling
 MODULES		= user user/jsonparse
-EXTRA_INCDIR	= include libesphttpd/include
+EXTRA_INCDIR	= include libesphttpd/include user/jsonparse
 
 # libraries used in this project, mainly provided by the SDK
 LIBS		= c gcc hal phy pp net80211 wpa main lwip crypto pwm
